添加图片墙展示模板，后续集成到展示页

--- a/web/templates/chat.html
+++ b/web/templates/chat.html
@@ -38,13 +38,13 @@
             <!--三图标-->
             <div class="sidestrip_icon">
                 <!--性别分布-->
-                <i id="item-gender" class="fa fa-venus-mars cur"></i>
+                <i id="item-gender" class="fa fa-venus-mars"></i>
                 <!--头像大图-->
                 <i id="item-avatars" class="fa fa-users"></i>
                 <!--签名词云-->
                 <i id="item-wordcloud" class="fa fa-cloud"></i>
                 <!--位置分布-->
-                <i id="item-locations" class="fa fa-paper-plane"></i>
+                <i id="item-locations" class="fa fa-paper-plane cur"></i>
             </div>
 
         </div>
