--- a/web/templates/chat.html
+++ b/web/templates/chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../static/css/amazeui.min.css"/>
     <link rel="stylesheet" href="../static/css/main.css"/>
     <link rel="stylesheet" href="../static/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/css/3dimages-mine.css"/>
 </head>
 <body>
 <div class="box">
@@ -42,7 +43,7 @@
                    onclick="changeTab('item-gender','tab-content-gender',load_gender())"></i>
                 <!--头像照片墙-->
                 <i id="item-avatars" class="tab fa fa-users"
-                   onclick="changeTab('item-avatars','tab-content-avatar')"></i>
+                   onclick="changeTab('item-avatars','tab-content-avatar',load_avatars())"></i>
                 <!--签名词云-->
                 <i id="item-wordcloud" class="tab fa fa-cloud"
                    onclick="changeTab('item-wordcloud','tab-content-wordcloud')"></i>
@@ -61,7 +62,12 @@
 
         <!--头像照片墙-->
         <div class="middle" id="tab-content-avatar">
-            <div id="avatar-wall" style="width: 800px;height: 680px"></div>
+            <div id="avatar-wall" style="width: 800px;height: 680px;position: relative">
+                <div id="command">
+                    <div id="bar"></div>
+                </div>
+                <div id="urlInfo"></div>
+            </div>
         </div>
 
         <!--签名词云-->
@@ -80,8 +86,9 @@
 <script type="text/javascript" src="../static/js/jquery.min.js"></script>
 <script type="text/javascript" src="../static/js/amazeui.min.js"></script>
 <script type="text/javascript" src="../static/js/zUI.js"></script>
-<script type="text/javascript" src="../static/js/wechat.js"></script>
+<script type="text/javascript" src="../static/js/3dimages-mine.js"></script>
 <script type="text/javascript" src="../static/echarts/js/echarts.min.js"></script>
+<script type="text/javascript" src="../static/js/wechat.js"></script>
 <script type="text/javascript">
 
     //三图标
