--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../static/css/rainbow-loader.css">
 </head>
 <body>
+<div id="uid" style="display: none">{{uid}}</div>
 <div class="box">
     <div class="qr">
         <div class="qr-outer">
-            <img id="qr" class="img" src="../static/images/qr.jpg" alt="登录二维码">
+            <img id="qr" class="img" alt="登录二维码">
             <div id="loading" class="loader" style="display: none">
                 <div class="loader-line-wrap">
                     <div class="loader-line"></div>
